--- a/transfer.html
+++ b/transfer.html
@@ -7,15 +7,21 @@
 </head>
 <body>
     <script>
-        let var1 = 'aaa'
-        let var2 = 'bbb'
-        let temp
-        temp = var1
-        var1 = var2
-        var2 = temp
-        alert(var1 + var2)
-        document.write(var1, var2)
-        console.log(var1, var2);
+        let userName = prompt('Please enter your name')
+        let age = prompt('Please enter your age')
+        let gender = prompt('Please enter your gender')
+        document.write(userName)
+        document.write(age)
+        document.write(gender)
+        // let var1 = 'aaa'
+        // let var2 = 'bbb'
+        // let temp
+        // temp = var1
+        // var1 = var2
+        // var2 = temp
+        // alert(var1 + var2)
+        // document.write(var1, var2)
+        // console.log(var1, var2);
     </script>
 </body>
 </html>
