--- a/transfer.html
+++ b/transfer.html
@@ -10,9 +10,10 @@
         let userName = prompt('Please enter your name')
         let age = prompt('Please enter your age')
         let gender = prompt('Please enter your gender')
-        document.write(userName)
-        document.write(age)
-        document.write(gender)
+        document.write(userName, age, gender)
+        // document.write(userName)
+        // document.write(age)
+        // document.write(gender)
         // let var1 = 'aaa'
         // let var2 = 'bbb'
         // let temp
