--- a/transfer.html
+++ b/transfer.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <script>
-        let userName = prompt('Please enter your name')
-        let age = prompt('Please enter your age')
-        let gender = prompt('Please enter your gender')
-        document.write(userName, age, gender)
+        let arrList = ['aaa', 'bbb', 'ccc', 12, 'ddd']
+        console.log(arrList);
+        console.log(arrList[1]);
+        console.log(arrList[3]);
+        // let userName = prompt('Please enter your name')
+        // let age = prompt('Please enter your age')
+        // let gender = prompt('Please enter your gender')
+        // document.write(userName, age, gender)
         // document.write(userName)
         // document.write(age)
         // document.write(gender)
