--- a/transfer.html
+++ b/transfer.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <script>
-        let arrList = ['aaa', 'bbb', 'ccc', 12, 'ddd']
-        console.log(arrList);
-        console.log(arrList[1]);
-        console.log(arrList[3]);
+        const PI = 3.14
+        console.log(PI);
+        // let arrList = ['aaa', 'bbb', 'ccc', 12, 'ddd']
+        // console.log(arrList);
+        // console.log(arrList[1]);
+        // console.log(arrList[3]);
         // let userName = prompt('Please enter your name')
         // let age = prompt('Please enter your age')
         // let gender = prompt('Please enter your gender')
