--- a/transfer.html
+++ b/transfer.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <script>
-        const PI = 3.14
-        console.log(PI);
+        console.log(11);
+        console.log('11');
+        console.log("11");
+        console.log(`11`);
+        console.log(``);
+        // const PI = 3.14
+        // console.log(PI);
         // let arrList = ['aaa', 'bbb', 'ccc', 12, 'ddd']
         // console.log(arrList);
         // console.log(arrList[1]);
