--- a/transfer.html
+++ b/transfer.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <script>
-        console.log(11);
-        console.log('11');
-        console.log("11");
-        console.log(`11`);
-        console.log(``);
+        let age = prompt('Please input your age:')
+        document.write(`I'm ${age} years old.`)
+        // console.log(11);
+        // console.log('11');
+        // console.log("11");
+        // console.log(`11`);
+        // console.log(``);
         // const PI = 3.14
         // console.log(PI);
         // let arrList = ['aaa', 'bbb', 'ccc', 12, 'ddd']
