--- a/transfer.html
+++ b/transfer.html
@@ -7,8 +7,16 @@
 </head>
 <body>
     <script>
-        let age = prompt('Please input your age:')
-        document.write(`I'm ${age} years old.`)
+        let un
+        let nu = null
+        console.log(typeof 11)
+        console.log(typeof '11')
+        console.log(typeof false)
+        console.log(typeof un)
+        console.log(typeof nu)
+        console.log(typeof 11)
+        // let age = prompt('Please input your age:')
+        // document.write(`I'm ${age} years old.`)
         // console.log(11);
         // console.log('11');
         // console.log("11");
