--- a/transfer.html
+++ b/transfer.html
@@ -9,12 +9,14 @@
     <script>
         let un
         let nu = null
+        let aaa = typeof 11 + typeof un + typeof nu
         console.log(typeof 11)
         console.log(typeof '11')
         console.log(typeof false)
         console.log(typeof un)
         console.log(typeof nu)
-        console.log(typeof 11)
+        console.log(typeof aaa)
+        console.log(typeof 11 + typeof un + typeof nu)
         // let age = prompt('Please input your age:')
         // document.write(`I'm ${age} years old.`)
         // console.log(11);
