--- a/transfer.html
+++ b/transfer.html
@@ -7,16 +7,20 @@
 </head>
 <body>
     <script>
-        let un
-        let nu = null
-        let aaa = typeof 11 + typeof un + typeof nu
-        console.log(typeof 11)
-        console.log(typeof '11')
-        console.log(typeof false)
-        console.log(typeof un)
-        console.log(typeof nu)
-        console.log(typeof aaa)
-        console.log(typeof 11 + typeof un + typeof nu)
+        let age1 = Number(prompt('Please input your age:'))
+        let age2 = prompt('Please input his age:')
+        console.log(age1);
+        console.log(age2);
+        // let un
+        // let nu = null
+        // let aaa = typeof 11 + typeof un + typeof nu
+        // console.log(typeof 11)
+        // console.log(typeof '11')
+        // console.log(typeof false)
+        // console.log(typeof un)
+        // console.log(typeof nu)
+        // console.log(typeof aaa)
+        // console.log(typeof 11 + typeof un + typeof nu)
         // let age = prompt('Please input your age:')
         // document.write(`I'm ${age} years old.`)
         // console.log(11);
