--- a/transfer.html
+++ b/transfer.html
@@ -11,6 +11,7 @@
         let age2 = prompt('Please input his age:')
         console.log(age1);
         console.log(age2);
+        console.log(+prompt('Please input his age:'));
         // let un
         // let nu = null
         // let aaa = typeof 11 + typeof un + typeof nu
