--- a/transfer.html
+++ b/transfer.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        let age1 = Number(prompt('Please input your age:'))
-        let age2 = prompt('Please input his age:')
-        console.log(age1);
-        console.log(age2);
-        console.log(+prompt('Please input his age:'));
+        console.log(NaN);
+        // let age1 = Number(prompt('Please input your age:'))
+        // let age2 = prompt('Please input his age:')
+        // console.log(age1);
+        // console.log(age2);
+        // console.log(+prompt('Please input his age:'));
         // let un
         // let nu = null
         // let aaa = typeof 11 + typeof un + typeof nu
@@ -53,4 +56,5 @@
         // console.log(var1, var2);
     </script>
 </body>
+
 </html>
