--- a/transfer.html
+++ b/transfer.html
@@ -9,9 +9,10 @@
 
 <body>
     <script>
-        console.log(+'-12.59');
-        console.log(parseInt('12.43yyyy'));
-        console.log(parseFloat('ppp12.58pppp'));
+        let age = +prompt('Please input his age:')
+        // console.log(+'-12.59');
+        // console.log(parseInt('12.43yyyy'));
+        // console.log(parseFloat('ppp12.58pppp'));
         // console.log(NaN);
         // let age1 = Number(prompt('Please input your age:'))
         // let age2 = prompt('Please input his age:')
