--- a/transfer.html
+++ b/transfer.html
@@ -9,7 +9,9 @@
 
 <body>
     <script>
-        let age = +prompt('Please input his age:')
+        let age1 = +prompt('Please input his age:')
+        let age2 = +prompt('Please input his age:')
+        alert(`added age is ${age1 +age2} .`)
         // console.log(+'-12.59');
         // console.log(parseInt('12.43yyyy'));
         // console.log(parseFloat('ppp12.58pppp'));
