--- a/transfer.html
+++ b/transfer.html
@@ -9,9 +9,12 @@
 
 <body>
     <script>
-        let age1 = +prompt('Please input his age:')
-        let age2 = +prompt('Please input his age:')
-        alert(`added age is ${age1 +age2} .`)
+        let num1 = 10
+        num1 + 1
+        console.log(num1);
+        // let age1 = +prompt('Please input his age:')
+        // let age2 = +prompt('Please input his age:')
+        // alert(`added age is ${age1 +age2} .`)
         // console.log(+'-12.59');
         // console.log(parseInt('12.43yyyy'));
         // console.log(parseFloat('ppp12.58pppp'));
