--- a/transfer.html
+++ b/transfer.html
@@ -9,9 +9,14 @@
 
 <body>
     <script>
-        let num1 = 10
-        num1 + 1
-        console.log(num1);
+        let num = -123
+        console.log(num);
+        let num2 = -'123'
+        console.log(num2);
+
+        // let num1 = 10
+        // num1 + 1
+        // console.log(num1);
         // let age1 = +prompt('Please input his age:')
         // let age2 = +prompt('Please input his age:')
         // alert(`added age is ${age1 +age2} .`)
