--- a/transfer.html
+++ b/transfer.html
@@ -9,10 +9,17 @@
 
 <body>
     <script>
-        let num = -123
-        console.log(num);
-        let num2 = -'123'
-        console.log(num2);
+        console.log(2 == '2');
+        console.log(2 === '2');
+        console.log(undefined == null);
+        console.log(undefined === null);
+        console.log(NaN == NaN);
+        console.log(NaN === NaN);
+
+        // let num = -123
+        // console.log(num);
+        // let num2 = -'123'
+        // console.log(num2);
 
         // let num1 = 10
         // num1 + 1
