--- a/transfer.html
+++ b/transfer.html
@@ -9,12 +9,15 @@
 
 <body>
     <script>
-        console.log(2 == '2');
-        console.log(2 === '2');
-        console.log(undefined == null);
-        console.log(undefined === null);
-        console.log(NaN == NaN);
-        console.log(NaN === NaN);
+        // console.log(2 == '2');
+        // console.log(2 === '2');
+        // console.log(undefined == null);
+        // console.log(undefined === null);
+        // console.log(NaN == NaN);
+        // console.log(NaN === NaN);
+        console.log(NaN > 1);
+        console.log(NaN == 1);
+        console.log(NaN < 1);
 
         // let num = -123
         // console.log(num);
