--- a/transfer.html
+++ b/transfer.html
@@ -15,9 +15,11 @@
         // console.log(undefined === null);
         // console.log(NaN == NaN);
         // console.log(NaN === NaN);
-        console.log(NaN > 1);
-        console.log(NaN == 1);
-        console.log(NaN < 1);
+        // console.log(NaN > 1);
+        // console.log(NaN == 1);
+        // console.log(NaN < 1);
+        console.log(3 < '5');
+        console.log(3 > '5');
 
         // let num = -123
         // console.log(num);
