--- a/transfer.html
+++ b/transfer.html
@@ -9,6 +9,14 @@
 
 <body>
     <script>
+        // console.log(false + 1);
+        // console.log(true + 1);
+        console.log(true + 1);
+        // console.log(++false);
+        // console.log(++true);
+        console.log(true < false);
+        console.log(true > false);
+
         // console.log(2 == '2');
         // console.log(2 === '2');
         // console.log(undefined == null);
@@ -18,8 +26,8 @@
         // console.log(NaN > 1);
         // console.log(NaN == 1);
         // console.log(NaN < 1);
-        console.log(3 < '5');
-        console.log(3 > '5');
+        // console.log(3 < '5');
+        // console.log(3 > '5');
 
         // let num = -123
         // console.log(num);
