--- a/transfer.html
+++ b/transfer.html
@@ -11,11 +11,11 @@
     <script>
         // console.log(false + 1);
         // console.log(true + 1);
-        console.log(true + 1);
+        // console.log(true + 1);
         // console.log(++false);
         // console.log(++true);
-        console.log(true < false);
-        console.log(true > false);
+        console.log(true !== false);
+        console.log(true !== false);
 
         // console.log(2 == '2');
         // console.log(2 === '2');
