--- a/transfer.html
+++ b/transfer.html
@@ -9,13 +9,16 @@
 
 <body>
     <script>
+        let num = prompt('Please input a number:')
+        console.log(num);
+        console.log(num + '0');
         // console.log(false + 1);
         // console.log(true + 1);
         // console.log(true + 1);
         // console.log(++false);
         // console.log(++true);
-        console.log(true !== false);
-        console.log(true !== false);
+        // console.log(true !== false);
+        // console.log(true !== false);
 
         // console.log(2 == '2');
         // console.log(2 === '2');
