--- a/transfer.html
+++ b/transfer.html
@@ -9,9 +9,23 @@
 
 <body>
     <script>
-        let num = prompt('Please input a number:')
-        console.log(num);
-        console.log(num + '0');
+        let num = 4
+        switch (num) {
+            case 1:
+                console.log('aaa');
+                break
+            case 2:
+                console.log('bbb');
+                break
+            case 3:
+                console.log('ccc');
+                break
+            default:
+                console.log('other');
+        }
+        // let num = prompt('Please input a number:')
+        // console.log(num);
+        // console.log(num + '0');
         // console.log(false + 1);
         // console.log(true + 1);
         // console.log(true + 1);
