--- a/transfer.html
+++ b/transfer.html
@@ -9,20 +9,31 @@
 
 <body>
     <script>
-        let num = 4
-        switch (num) {
-            case 1:
-                console.log('aaa');
-                break
-            case 2:
-                console.log('bbb');
-                break
-            case 3:
-                console.log('ccc');
-                break
-            default:
-                console.log('other');
+
+        let i = 1
+        while(i <= 3){
+            document.write(`aaa${i}bbb<br>`)
+            i++
         }
+        // let num = 4
+        // num = num + 1
+        // console.log(num);
+
+        // let num = 4
+        // switch (num) {
+        //     case 1:
+        //         console.log('aaa');
+        //         break
+        //     case 2:
+        //         console.log('bbb');
+        //         break
+        //     case 3:
+        //         console.log('ccc');
+        //         break
+        //     default:
+        //         console.log('other');
+        // }
+
         // let num = prompt('Please input a number:')
         // console.log(num);
         // console.log(num + '0');
