--- a/transfer.html
+++ b/transfer.html
@@ -10,11 +10,20 @@
 <body>
     <script>
 
-        let i = 1
-        while(i <= 3){
-            document.write(`aaa${i}bbb<br>`)
-            i++
-        }
+        prompt(`
+        aaa:
+            bb
+            cc
+            dd
+            ee
+        `)
+
+        // let i = 1
+        // while(i <= 3){
+        //     document.write(`aaa${i}bbb<br>`)
+        //     i++
+        // }
+
         // let num = 4
         // num = num + 1
         // console.log(num);
