--- a/transfer.html
+++ b/transfer.html
@@ -10,6 +10,22 @@
 <body>
     <script>
 
+        // prompt(`
+        // aaa:
+        //     bb
+        //     cc
+        //     dd
+        //     ee
+        // `)
+
+        prompt("
+        aaa:
+            bb
+            cc
+            dd
+            ee
+        ")
+
         prompt(`
         aaa:
             bb
