--- a/transfer.html
+++ b/transfer.html
@@ -10,6 +10,11 @@
 <body>
     <script>
 
+        let arr = []
+        console.log(arr);
+        console.log(arr[0]);
+        console.log(arr[1]);
+
         // prompt(`
         // aaa:
         //     bb
@@ -18,21 +23,21 @@
         //     ee
         // `)
 
-        prompt("
-        aaa:
-            bb
-            cc
-            dd
-            ee
-        ")
+        // prompt("
+        // aaa:
+        //     bb
+        //     cc
+        //     dd
+        //     ee
+        // ")
 
-        prompt(`
-        aaa:
-            bb
-            cc
-            dd
-            ee
-        `)
+        // prompt(`
+        // aaa:
+        //     bb
+        //     cc
+        //     dd
+        //     ee
+        // `)
 
         // let i = 1
         // while(i <= 3){
