--- a/transfer.html
+++ b/transfer.html
@@ -10,10 +10,18 @@
 <body>
     <script>
 
-        let arr = []
-        console.log(arr);
-        console.log(arr[0]);
-        console.log(arr[1]);
+        while(true) {
+            document.write(123)
+        }
+
+        for(;;) {
+            console.log(123);
+        }
+
+        // let arr = []
+        // console.log(arr);
+        // console.log(arr[0]);
+        // console.log(arr[1]);
 
         // prompt(`
         // aaa:
