--- a/transfer.html
+++ b/transfer.html
@@ -10,13 +10,21 @@
 <body>
     <script>
 
-        while(true) {
-            document.write(123)
-        }
+        // let arr = ['aa', 'bb', 'cc']
+        // arr.push('dd', 'ee')
+        // console.log(arr);
 
-        for(;;) {
-            console.log(123);
-        }
+        // let arr = ['aa', 'bb', 'cc']
+        // arr.unshift('dd', 'ee')
+        // console.log(arr);
+
+        // while(true) {
+        //     document.write(123)
+        // }
+
+        // for(;;) {
+        //     console.log(123);
+        // }
 
         // let arr = []
         // console.log(arr);
