--- a/transfer.html
+++ b/transfer.html
@@ -11,11 +11,11 @@
     <script>
 
         // let arr = ['aa', 'bb', 'cc']
-        // arr.push('dd', 'ee')
+        // console.log(arr.push('dd', 'ee'));
         // console.log(arr);
 
         // let arr = ['aa', 'bb', 'cc']
-        // arr.unshift('dd', 'ee')
+        // console.log(arr.unshift('dd', 'ee'));
         // console.log(arr);
 
         // while(true) {
