--- a/transfer.html
+++ b/transfer.html
@@ -10,6 +10,14 @@
 <body>
     <script>
 
+        let arr = ['aa', 'bb', 'cc']
+        console.log(arr.pop());
+        console.log(arr);
+
+        // let arr = ['aa', 'bb', 'cc']
+        // console.log(arr.pop());
+        // console.log(arr);
+
         // let arr = ['aa', 'bb', 'cc']
         // console.log(arr.push('dd', 'ee'));
         // console.log(arr);
