--- a/transfer.html
+++ b/transfer.html
@@ -11,7 +11,7 @@
     <script>
 
         let arr = ['aa', 'bb', 'cc']
-        console.log(arr.pop());
+        console.log(arr.shift());
         console.log(arr);
 
         // let arr = ['aa', 'bb', 'cc']
