--- a/transfer.html
+++ b/transfer.html
@@ -10,9 +10,13 @@
 <body>
     <script>
 
-        let arr = ['aa', 'bb', 'cc']
-        console.log(arr.shift());
+        let arr = ['aa', 'bb', 'cc', 'dd']
+        console.log(arr.splice(1, 2));
         console.log(arr);
+
+        // let arr = ['aa', 'bb', 'cc']
+        // console.log(arr.shift());
+        // console.log(arr);
 
         // let arr = ['aa', 'bb', 'cc']
         // console.log(arr.pop());
