--- a/transfer.html
+++ b/transfer.html
@@ -10,9 +10,21 @@
 <body>
     <script>
 
-        let arr = ['aa', 'bb', 'cc', 'dd']
-        console.log(arr.splice(1, 2));
+        let arr = [1, 2, 3, 5, 4]
+        for(let i = 0; i <= arr.length - 1; i++) {
+            for(let j = 0; j <= arr.length - i -1; j++) {
+                if(arr[j] > arr[j + 1]) {
+                    let temp = arr[j]
+                    arr[j] = arr[j + 1]
+                    arr[j + 1] = temp
+                }
+            }
+        }
         console.log(arr);
+
+        // let arr = ['aa', 'bb', 'cc', 'dd']
+        // console.log(arr.splice(1, 2));
+        // console.log(arr);
 
         // let arr = ['aa', 'bb', 'cc']
         // console.log(arr.shift());
