--- a/transfer.html
+++ b/transfer.html
@@ -10,17 +10,23 @@
 <body>
     <script>
 
-        let arr = [1, 2, 3, 5, 4]
-        for(let i = 0; i <= arr.length - 1; i++) {
-            for(let j = 0; j <= arr.length - i -1; j++) {
-                if(arr[j] > arr[j + 1]) {
-                    let temp = arr[j]
-                    arr[j] = arr[j + 1]
-                    arr[j + 1] = temp
-                }
-            }
-        }
+        let arr = [2, 1, 3, 5, 4]
+        arr.sort(function(a, b) {
+            return a - b
+        })
         console.log(arr);
+
+        // let arr = [1, 2, 3, 5, 4]
+        // for(let i = 0; i <= arr.length - 1; i++) {
+        //     for(let j = 0; j <= arr.length - i -1; j++) {
+        //         if(arr[j] > arr[j + 1]) {
+        //             let temp = arr[j]
+        //             arr[j] = arr[j + 1]
+        //             arr[j + 1] = temp
+        //         }
+        //     }
+        // }
+        // console.log(arr);
 
         // let arr = ['aa', 'bb', 'cc', 'dd']
         // console.log(arr.splice(1, 2));
