--- a/transfer.html
+++ b/transfer.html
@@ -12,9 +12,15 @@
 
         let arr = [2, 1, 3, 5, 4]
         arr.sort(function(a, b) {
-            return a - b
+            return b -a
         })
         console.log(arr);
+
+        // let arr = [2, 1, 3, 5, 4]
+        // arr.sort(function(a, b) {
+        //     return a - b
+        // })
+        // console.log(arr);
 
         // let arr = [1, 2, 3, 5, 4]
         // for(let i = 0; i <= arr.length - 1; i++) {
