--- a/transfer.html
+++ b/transfer.html
@@ -11,10 +11,14 @@
     <script>
 
         let arr = [2, 1, 3, 5, 4]
-        arr.sort(function(a, b) {
-            return b -a
-        })
+        console.log(arr.sort());
         console.log(arr);
+
+        // let arr = [2, 1, 3, 5, 4]
+        // arr.sort(function(a, b) {
+        //     return b -a
+        // })
+        // console.log(arr);
 
         // let arr = [2, 1, 3, 5, 4]
         // arr.sort(function(a, b) {
