--- a/transfer.html
+++ b/transfer.html
@@ -10,9 +10,19 @@
 <body>
     <script>
 
-        let arr = [2, 1, 3, 5, 4]
-        console.log(arr.sort());
-        console.log(arr);
+        function getSum(start = 0, end = 0) {
+            let sum = 0
+            for(let i = start; i <= end; i++) {
+                sum += i
+            }
+            document.write(sum)
+        }
+        getSum(1, 100)
+
+        // let arr = [2, 1, 3, 5, 4]
+        // log
+        // console.log(arr.sort());
+        // console.log(arr);
 
         // let arr = [2, 1, 3, 5, 4]
         // arr.sort(function(a, b) {
