--- a/transfer.html
+++ b/transfer.html
@@ -20,6 +20,11 @@
         }
         fn()
 
+        function fn() {
+            document.write(3)
+        }
+        fn()
+
         // function getSum(start = 0, end = 0) {
         //     let sum = 0
         //     for(let i = start; i <= end; i++) {
