--- a/transfer.html
+++ b/transfer.html
@@ -10,20 +10,20 @@
 <body>
     <script>
 
-        function fn() {
-            document.write(1)
-        }
-        fn()
+        // function fn() {
+        //     document.write(1)
+        // }
+        // fn()
 
-        function fn() {
-            document.write(2)
-        }
-        fn()
+        // function fn() {
+        //     document.write(2)
+        // }
+        // fn()
 
-        function fn() {
-            document.write(3)
-        }
-        fn()
+        // function fn() {
+        //     document.write(3)
+        // }
+        // fn()
 
         // function getSum(start = 0, end = 0) {
         //     let sum = 0
