--- a/transfer.html
+++ b/transfer.html
@@ -10,6 +10,12 @@
 <body>
     <script>
 
+        function fn() {
+            num = 10
+        }
+        fn()
+        document.write(num)
+
         // function fn() {
         //     document.write(1)
         // }
