--- a/transfer.html
+++ b/transfer.html
@@ -10,10 +10,16 @@
 <body>
     <script>
 
+        // function fn() {
+        //     num = 10
+        // }
+        // fn()
+        // document.write(num)
+
         function fn() {
-            num = 10
+            num
         }
-        fn()
+        num = 10
         document.write(num)
 
         // function fn() {
