--- a/transfer.html
+++ b/transfer.html
@@ -16,9 +16,12 @@
         // fn()
         // document.write(num)
 
-        function fn() {
-            num
-        }
+        // function fn() {
+        //     num
+        // }
+        // num = 10
+        // document.write(num)
+
         num = 10
         document.write(num)
 
