--- a/transfer.html
+++ b/transfer.html
@@ -22,7 +22,10 @@
         // num = 10
         // document.write(num)
 
-        num = 10
+        // num = 10
+        // document.write(num)
+
+        // num = 10
         document.write(num)
 
         // function fn() {
