--- a/transfer.html
+++ b/transfer.html
@@ -9,6 +9,15 @@
 
 <body>
     <script>
+        fn()
+        let fn = function() {
+            document.write('aaa')
+        }
+
+        // let fn = function() {
+        //     document.write('aaa')
+        // }
+        // fn()
 
         // function fn() {
         //     num = 10
@@ -26,7 +35,9 @@
         // document.write(num)
 
         // num = 10
-        document.write(num)
+        // document.write(num)
+
+        // document.write(num)
 
         // function fn() {
         //     document.write(1)
