--- a/transfer.html
+++ b/transfer.html
@@ -9,10 +9,23 @@
 
 <body>
     <script>
-        fn()
-        let fn = function() {
-            document.write('aaa')
-        }
+
+        // (function(x, y) {
+        //     document.write(x + y)
+        // })(5, 9);
+        // (function(x, y) {
+        //     document.write(x + y)
+        // })(5, 9)
+
+        (function(x, y) {
+            document.write(x + y)
+        })(5, 9)
+        document.write('aaa')
+
+        // fn()
+        // let fn = function() {
+        //     document.write('aaa')
+        // }
 
         // let fn = function() {
         //     document.write('aaa')
