--- a/transfer.html
+++ b/transfer.html
@@ -10,17 +10,17 @@
 <body>
     <script>
 
-        // (function(x, y) {
-        //     document.write(x + y)
-        // })(5, 9);
-        // (function(x, y) {
-        //     document.write(x + y)
-        // })(5, 9)
-
+        (function(x, y) {
+            document.write(x + y)
+        })(5, 9);
         (function(x, y) {
             document.write(x + y)
         })(5, 9)
-        document.write('aaa')
+
+        // (function(x, y) {
+        //     document.write(x + y)
+        // })(5, 9)
+        // document.write('aaa')
 
         // fn()
         // let fn = function() {
