--- a/transfer.html
+++ b/transfer.html
@@ -10,12 +10,20 @@
 <body>
     <script>
 
-        (function(x, y) {
-            document.write(x + y)
-        })(5, 9);
-        (function(x, y) {
+        (function (x, y) {
             document.write(x + y)
         })(5, 9)
+        function getSum(a, b) {
+            document.write(a + b)
+        }
+        getSum(2, 3)
+
+        // (function(x, y) {
+        //     document.write(x + y)
+        // })(5, 9);
+        // (function(x, y) {
+        //     document.write(x + y)
+        // })(5, 9)
 
         // (function(x, y) {
         //     document.write(x + y)
