--- a/transfer.html
+++ b/transfer.html
@@ -10,9 +10,23 @@
 <body>
     <script>
 
+        // (function I(a, b) {
+        //     document.write( a + b)
+        // }(4, 5))
+        // (function I(a, b) {
+        //     document.write( a + b)
+        // }(2, 3))
+
         (function I(a, b) {
             document.write( a + b)
         }(4, 5))
+        (function I(a, b) {
+            document.write( a + b)
+        }(2, 3))
+
+        // (function I(a, b) {
+        //     document.write( a + b)
+        // }(4, 5))
 
         // (function (x, y) {
         //     document.write(x + y)
