--- a/transfer.html
+++ b/transfer.html
@@ -10,12 +10,14 @@
 <body>
     <script>
 
-        (function I(a, b) {
-            document.write( a + b)
-        }(4, 5));
-        (function I(a, b) {
-            document.write( a + b)
-        }(2, 3))
+        num = num > 4 ? num + 3 : num - 2
+
+        // (function I(a, b) {
+        //     document.write( a + b)
+        // }(4, 5));
+        // (function I(a, b) {
+        //     document.write( a + b)
+        // }(2, 3))
 
         // (function I(a, b) {
         //     document.write( a + b)
