--- a/transfer.html
+++ b/transfer.html
@@ -10,7 +10,7 @@
 <body>
     <script>
 
-        num = num > 4 ? num + 3 : num - 2
+        // num = num > 4 ? num + 3 : num - 2
 
         // (function I(a, b) {
         //     document.write( a + b)
