--- a/intro.html
+++ b/intro.html
@@ -1,2 +1,15 @@
-<strong>I'm<br> strong</strong>
-<hr>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>I'm title</title>
+</head>
+
+<body>
+    <strong>I'm<br> strong</strong>
+    <hr>
+</body>
+
+</html>
