--- a/intro.html
+++ b/intro.html
@@ -13,8 +13,8 @@
     first
     second    
     third
-    <p></p>
-    <p></p>
+    <p>The Sun is the star at the center of the Solar System. It is a massive, nearly perfect sphere of hot plasma,[18][19] heated to incandescence by nuclear fusion reactions in its core, radiating the energy from its surface mainly as visible light and infrared radiation with 10% at ultraviolet energies. It is by far the most important source of energy for life on Earth. The Sun has been an object of veneration in many cultures. It has been a central subject for astronomical research since antiquity. </p>
+    <p>The Sun is the star at the center of the Solar System. It is a massive, nearly perfect sphere of hot plasma,[18][19] heated to incandescence by nuclear fusion reactions in its core, radiating the energy from its surface mainly as visible light and infrared radiation with 10% at ultraviolet energies. It is by far the most important source of energy for life on Earth. The Sun has been an object of veneration in many cultures. It has been a central subject for astronomical research since antiquity. </p>
 </body>
 
 </html>
