--- a/intro.html
+++ b/intro.html
@@ -9,28 +9,32 @@
 
 <body>
 
-    <img src="./Sun1.jpg" alt="Sun1">
-    <img src="./Sun2.png" alt="Sun2">
+    <img src="./Sun3.jpg" alt="Sun1">
+    
+    <img src="./Sun3.jpg" alt="Sun1">
 
-    <br>
+    <!-- <img src="./Sun1.jpg" alt="Sun1">
+    <img src="./Sun2.png" alt="Sun2"> -->
+
+    <!-- <br>
     <strong>I'm<br> strong</strong>
-    <hr>
+    <hr> -->
 
-    first
+    <!-- first
     second    
-    third
+    third -->
 
-    <p>The Sun is the star at the center of the Solar System. It is a massive, nearly perfect sphere of hot plasma,[18][19] heated to incandescence by nuclear fusion reactions in its core, radiating the energy from its surface mainly as visible light and infrared radiation with 10% at ultraviolet energies. It is by far the most important source of energy for life on Earth. The Sun has been an object of veneration in many cultures. It has been a central subject for astronomical research since antiquity. </p>
-    <p>The Sun is the star at the center of the Solar System. It is a massive, nearly perfect sphere of hot plasma,[18][19] heated to incandescence by nuclear fusion reactions in its core, radiating the energy from its surface mainly as visible light and infrared radiation with 10% at ultraviolet energies. It is by far the most important source of energy for life on Earth. The Sun has been an object of veneration in many cultures. It has been a central subject for astronomical research since antiquity. </p>
+    <!-- <p>The Sun is the star at the center of the Solar System. It is a massive, nearly perfect sphere of hot plasma,[18][19] heated to incandescence by nuclear fusion reactions in its core, radiating the energy from its surface mainly as visible light and infrared radiation with 10% at ultraviolet energies. It is by far the most important source of energy for life on Earth. The Sun has been an object of veneration in many cultures. It has been a central subject for astronomical research since antiquity. </p>
+    <p>The Sun is the star at the center of the Solar System. It is a massive, nearly perfect sphere of hot plasma,[18][19] heated to incandescence by nuclear fusion reactions in its core, radiating the energy from its surface mainly as visible light and infrared radiation with 10% at ultraviolet energies. It is by far the most important source of energy for life on Earth. The Sun has been an object of veneration in many cultures. It has been a central subject for astronomical research since antiquity. </p> -->
 
-    <strong>strong</strong>
+    <!-- <strong>strong</strong>
     <b>b</b>
     <em>em</em>
     <i>i</i>
     <ins>ins</ins>
     <u>u</u>
     <del>del</del>
-    <s>s</s>
+    <s>s</s> -->
 </body>
 
 </html>
