--- a/intro.html
+++ b/intro.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <img src="./Sun3.jpg" alt="Sun1">
-    
-    <img src="./Sun3.jpg" alt="Sun1">
+    <img src="./Sun1.jpg" alt="Sun1" title="the Sun" width="400">
+
+    <!-- <img src="./Sun3.jpg" alt="Sun1"> -->
 
     <!-- <img src="./Sun1.jpg" alt="Sun1">
     <img src="./Sun2.png" alt="Sun2"> -->
