--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <img src="./Sun1.jpg" alt="Sun1" title="the Sun" width="400">
+    <img src="./Sun1.jpg" alt="Sun1" title="the Sun" width="400" height="200">
 
     <!-- <img src="./Sun3.jpg" alt="Sun1"> -->
 
