--- a/intro/intro.html
+++ b/intro/intro.html
@@ -10,6 +10,8 @@
 <body>
 
     <img src="./Sun1.jpg" alt="Sun1" title="the Sun" width="400" height="200">
+    <img src="./images/Sun2.png" alt="Sun2" title="Sun2">
+    <img src="../Sun3.jpg" alt="Sun3" title="Sun3">
 
     <!-- <img src="./Sun3.jpg" alt="Sun1"> -->
 
