--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,7 +9,11 @@
 
 <body>
 
-    <a href="https://wikiless.northboot.xyz/wiki/Sun?lang=en">Sun</a>
+    <a href="#" target="_blank">Sun</a>
+
+    <!-- <a href="https://wikiless.northboot.xyz/wiki/Sun?lang=en" target="_blank">Sun</a> -->
+
+    <!-- <a href="https://wikiless.northboot.xyz/wiki/Sun?lang=en">Sun</a> -->
 
     <!-- <img src="./Sun1.jpg" alt="Sun1" title="the Sun" width="400" height="200">
     <img src="./images/Sun2.png" alt="Sun2" title="Sun2">
