--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <a href="#" target="_blank">Sun</a>
+    <a href="#" target="_blank">emptyLink</a>
 
     <!-- <a href="https://wikiless.northboot.xyz/wiki/Sun?lang=en" target="_blank">Sun</a> -->
 
