--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <a href="#" target="_blank">emptyLink</a>
+    <!-- <a href="#" target="_blank">emptyLink</a> -->
 
-    <!-- <a href="https://wikiless.northboot.xyz/wiki/Sun?lang=en" target="_blank">Sun</a> -->
+    <a href="https://wikiless.northboot.xyz/wiki/Sun?lang=en" target="_blank">openNewTab</a>
 
     <!-- <a href="https://wikiless.northboot.xyz/wiki/Sun?lang=en">Sun</a> -->
 
