--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,7 +9,9 @@
 
 <body>
 
-    <audio src="./audios/Post Malone, Swae Lee - Sunflower (Spider-Man： Into the Spider-Verse) [ApXoWvfEYVU].opus"></audio>
+    <audio src="./audios/Post Malone, Swae Lee - Sunflower (Spider-Man： Into the Spider-Verse) [ApXoWvfEYVU].opus" controls></audio>
+
+    <!-- <audio src="./audios/Post Malone, Swae Lee - Sunflower (Spider-Man： Into the Spider-Verse) [ApXoWvfEYVU].opus"></audio> -->
 
     <!-- <a href="#" target="_blank">emptyLink</a> -->
 
