--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,7 +9,9 @@
 
 <body>
 
-    <audio src="./audios/Post Malone, Swae Lee - Sunflower (Spider-Man： Into the Spider-Verse) [ApXoWvfEYVU].opus" controls loop autoplay></audio>
+    <audio src="./audios/Post Malone, Swae Lee - Sunflower (Spider-Man： Into the Spider-Verse) [ApXoWvfEYVU].opus" controls="controls" loop="loop" autoplay="autoplay"></audio>
+
+    <!-- <audio src="./audios/Post Malone, Swae Lee - Sunflower (Spider-Man： Into the Spider-Verse) [ApXoWvfEYVU].opus" controls loop autoplay></audio> -->
 
     <!-- <audio src="./audios/Post Malone, Swae Lee - Sunflower (Spider-Man： Into the Spider-Verse) [ApXoWvfEYVU].opus" controls></audio> -->
 
