--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <video src="./videos/Blackway & Black Caviar - ＂What's Up Danger＂ (Spider-Man： Into the Spider-Verse) [nZFNut0RGlQ].mp4" controls></video>
+    <video src="./videos/Blackway & Black Caviar - ＂What's Up Danger＂ (Spider-Man： Into the Spider-Verse) [nZFNut0RGlQ].mp4" controls loop></video>
 
     <!-- <audio src="./audios/Post Malone, Swae Lee - Sunflower (Spider-Man： Into the Spider-Verse) [ApXoWvfEYVU].opus" controls="controls" loop="loop" autoplay="autoplay"></audio> -->
 
