--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,11 +9,17 @@
 
 <body>
 
-    <ul>
+    <ol>
         <li>aaa</li>
         <li>bbb</li>
         <li>ccc</li>
-    </ul>
+    </ol>
+
+    <!-- <ul>
+        <li>aaa</li>
+        <li>bbb</li>
+        <li>ccc</li>
+    </ul> -->
 
     <!-- <a href="">aaa</a> -->
 
