--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,11 +9,18 @@
 
 <body>
 
-    <ol>
+    <dl>
+        <dt>aaa</dt>
+        <dd>bbb</dd>
+        <dd>ccc</dd>
+        <dd>ddd</dd>
+    </dl>
+
+    <!-- <ol>
         <li>aaa</li>
         <li>bbb</li>
         <li>ccc</li>
-    </ol>
+    </ol> -->
 
     <!-- <ul>
         <li>aaa</li>
