--- a/intro/intro.html
+++ b/intro/intro.html
@@ -10,26 +10,32 @@
 <body>
 
     <table border="1">
-        <tr>
-            <th>111</th>
-            <th>222</th>
-            <th>333</th>
-        </tr>
-        <tr>
-            <td>aa</td>
-            <td>ab</td>
-            <td>ac</td>
-        </tr>
-        <tr>
-            <td>ba</td>
-            <td>bb</td>
-            <td>bc</td>
-        </tr>
-        <tr>
-            <td>ca</td>
-            <td>cb</td>
-            <td>cc</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>111</th>
+                <th>222</th>
+                <th>333</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>aa</td>
+                <td>ab</td>
+                <td>ac</td>
+            </tr>
+            <tr>
+                <td>ba</td>
+                <td>bb</td>
+                <td>bc</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>ca</td>
+                <td>cb</td>
+                <td>cc</td>
+            </tr>
+        </tfoot>
     </table>
 
     <!-- <dl>
