--- a/intro/intro.html
+++ b/intro/intro.html
@@ -20,6 +20,35 @@
         <tbody>
             <tr>
                 <td>aa</td>
+                <td rowspan="2">ab</td>
+                <td>ac</td>
+            </tr>
+            <tr>
+                <td>ba</td>
+                <!-- <td>bb</td> -->
+                <td>bc</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3">ca</td>
+                <!-- <td>cb</td>
+                <td>cc</td> -->
+            </tr>
+        </tfoot>
+    </table>
+
+    <!-- <table border="1">
+        <thead>
+            <tr>
+                <th>111</th>
+                <th>222</th>
+                <th>333</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>aa</td>
                 <td>ab</td>
                 <td>ac</td>
             </tr>
@@ -36,7 +65,7 @@
                 <td>cc</td>
             </tr>
         </tfoot>
-    </table>
+    </table> -->
 
     <!-- <dl>
         <dt>aaa</dt>
