--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,6 +9,17 @@
 
 <body>
 
+    text: <input type="text">
+    <br>
+    password: <input type="password">
+    <br>
+    radio: <input type="radio">
+    <br>
+    checkbox: <input type="checkbox">
+    <br>
+    file: <input type="file">
+    <br>
+
     <table border="1">
         <thead>
             <tr>
