--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    text: <input type="text">
+    text: <input type="text" placeholder="Please input username">
     <br>
-    password: <input type="password">
+    password: <input type="password" placeholder="Please input password">
     <br>
     radio: <input type="radio">
     <br>
