--- a/intro/intro.html
+++ b/intro/intro.html
@@ -13,7 +13,8 @@
     <br>
     password: <input type="password" placeholder="Please input password">
     <br>
-    radio: <input type="radio">
+    radio: <input type="radio" name="gender" checked>famale
+    <input type="radio" name="gender">male
     <br>
     checkbox: <input type="checkbox">
     <br>
