--- a/intro/intro.html
+++ b/intro/intro.html
@@ -18,7 +18,7 @@
     <br>
     checkbox: <input type="checkbox">
     <br>
-    file: <input type="file">
+    file: <input type="file" multiple>
     <br>
 
     <table border="1">
