--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,16 +9,22 @@
 
 <body>
 
-    text: <input type="text" placeholder="Please input username">
+    text:
+    <input type="text" placeholder="Please input username">
     <br>
-    password: <input type="password" placeholder="Please input password">
+    password:
+    <input type="password" placeholder="Please input password">
     <br>
-    radio: <input type="radio" name="gender" checked>famale
+    radio:
+    <input type="radio" name="gender" checked>famale
     <input type="radio" name="gender">male
     <br>
-    checkbox: <input type="checkbox">
+    checkbox:
+    <input type="checkbox" checked>aaa
+    <input type="checkbox" >bbb
     <br>
-    file: <input type="file" multiple>
+    file:
+    <input type="file" multiple>
     <br>
 
     <table border="1">
