--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,7 +9,14 @@
 
 <body>
 
-    text:
+    111:
+    <select>
+        <option>aaa</option>
+        <option selected>bbb</option>
+        <option>bbb</option>
+    </select>
+
+    <!-- text:
     <input type="text" placeholder="Please input username">
     <br>
     password:
@@ -25,7 +32,7 @@
     <br>
     file:
     <input type="file" multiple>
-    <br>
+    <br> -->
 
     <table border="1">
         <thead>
