--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,12 +9,14 @@
 
 <body>
 
-    111:
+    <textarea>Please input your comment: </textarea>
+
+    <!-- 111:
     <select>
         <option>aaa</option>
         <option selected>bbb</option>
         <option>bbb</option>
-    </select>
+    </select> -->
 
     <!-- text:
     <input type="text" placeholder="Please input username">
