--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,7 +9,11 @@
 
 <body>
 
-    <textarea>Please input your comment: </textarea>
+    gender: 
+    <input type="radio" name="gender" id="famale" checked><label for="famale">famale</label>
+    <label><input type="radio" name="gender">male</label>
+
+    <!-- <textarea>Please input your comment: </textarea> -->
 
     <!-- 111:
     <select>
