--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,9 +9,19 @@
 
 <body>
 
-    gender: 
+    <form action="">
+        username: <input type="text" placeholder="Please input username">
+        <br>
+        password: <input type="password" placeholder="Please input password">
+        <br>
+        <button type="submit">submit</button>
+        <button type="reset">reset</button>
+        <button type="button">button</button>
+    </form>
+
+    <!-- gender: 
     <input type="radio" name="gender" id="famale" checked><label for="famale">famale</label>
-    <label><input type="radio" name="gender">male</label>
+    <label><input type="radio" name="gender">male</label> -->
 
     <!-- <textarea>Please input your comment: </textarea> -->
 
