--- a/intro/intro.html
+++ b/intro/intro.html
@@ -14,6 +14,7 @@
         <br>
         password: <input type="password" placeholder="Please input password">
         <br>
+        <button>submit</button>
         <button type="submit">submit</button>
         <button type="reset">reset</button>
         <button type="button">button</button>
