--- a/intro/intro.html
+++ b/intro/intro.html
@@ -9,7 +9,12 @@
 
 <body>
 
-    <form action="">
+    <div>This is a div.</div>
+    <div>This is a div.</div>
+    <span>This is a span.</span>
+    <span>This is a span.</span>
+
+    <!-- <form action="">
         username: <input type="text" placeholder="Please input username">
         <br>
         password: <input type="password" placeholder="Please input password">
@@ -18,7 +23,7 @@
         <button type="submit">submit</button>
         <button type="reset">reset</button>
         <button type="button">button</button>
-    </form>
+    </form> -->
 
     <!-- gender: 
     <input type="radio" name="gender" id="famale" checked><label for="famale">famale</label>
