--- a/shop.html
+++ b/shop.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <link rel="stylesheet" href="./shop.css">
+    <!-- <style>
         p {
             color: red;
             font-size: 20px;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <p>This is text.</p>
