--- a/shop.html
+++ b/shop.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./shop.css">
-    <!-- <style>
-        p {
+    <!-- <link rel="stylesheet" href="./shop.css"> -->
+
+    <style>
+        /* p {
             color: red;
             font-size: 20px;
+        } */
+
+        .color-pink {
+            color: pink;
         }
-    </style> -->
+        .font-40px {
+            font-size: 40px;
+        }
+    </style>
 </head>
 <body>
-    <p>This is text.</p>
-    <div style="color: orange;font-size: 30px;">This is div.</div>
+    <p class="color-pink">This is text.</p>
+    <div class="color-pink font-40px">This is div.</div>
+    <!-- <div style="color: orange;font-size: 30px;">This is div.</div> -->
 </body>
 </html>
