--- a/shop.html
+++ b/shop.html
@@ -12,17 +12,23 @@
             font-size: 20px;
         } */
 
-        .color-pink {
+        /* .color-pink {
             color: pink;
         }
         .font-40px {
+            font-size: 40px;
+        } */
+
+        #div1 {
+            color: purple;
             font-size: 40px;
         }
     </style>
 </head>
 <body>
-    <p class="color-pink">This is text.</p>
-    <div class="color-pink font-40px">This is div.</div>
+    <div id="div1">This is div.</div>
+    <!-- <p class="color-pink">This is text.</p>
+    <div class="color-pink font-40px">This is div.</div> -->
     <!-- <div style="color: orange;font-size: 30px;">This is div.</div> -->
 </body>
 </html>
