--- a/shop.html
+++ b/shop.html
@@ -19,14 +19,20 @@
             font-size: 40px;
         } */
 
-        #div1 {
+        /* #div1 {
             color: purple;
             font-size: 40px;
+        } */
+
+        * {
+            color: red;
         }
     </style>
 </head>
 <body>
-    <div id="div1">This is div.</div>
+    <div>div</div>
+    <strong>strong</strong>
+    <!-- <div id="div1">This is div.</div> -->
     <!-- <p class="color-pink">This is text.</p>
     <div class="color-pink font-40px">This is div.</div> -->
     <!-- <div style="color: orange;font-size: 30px;">This is div.</div> -->
