--- a/shop.html
+++ b/shop.html
@@ -24,14 +24,28 @@
             font-size: 40px;
         } */
 
-        * {
+        /* * {
             color: red;
+        } */
+
+        .red {
+            background-color: red;
+            width: 100px;
+            height: 100px;
+        }
+
+        .pink {
+            background-color: pink;
+            width: 200px;
+            height: 200px;
         }
     </style>
 </head>
 <body>
-    <div>div</div>
-    <strong>strong</strong>
+    <div class="red">div1</div>
+    <div class="pink">div2</div>
+    <!-- <div>div</div>
+    <strong>strong</strong> -->
     <!-- <div id="div1">This is div.</div> -->
     <!-- <p class="color-pink">This is text.</p>
     <div class="color-pink font-40px">This is div.</div> -->
