--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,7 @@
             color: red;
         } */
 
-        .red {
+        /* .red {
             background-color: red;
             width: 100px;
             height: 100px;
@@ -38,12 +38,28 @@
             background-color: pink;
             width: 200px;
             height: 200px;
+        } */
+
+        h2 {
+            font-weight: 400;
         }
+        h3 {
+            font-weight: normal;
+        }
+        div {
+            font-weight: 700;
+        }
+        p {
+            font-weight: bold;
+        }
+
     </style>
 </head>
 <body>
-    <div class="red">div1</div>
-    <div class="pink">div2</div>
+    <h2>aaaaa</h2>
+    <div>bbbbb</div>
+    <!-- <div class="red">div1</div>
+    <div class="pink">div2</div> -->
     <!-- <div>div</div>
     <strong>strong</strong> -->
     <!-- <div id="div1">This is div.</div> -->
