--- a/shop.html
+++ b/shop.html
@@ -40,7 +40,7 @@
             height: 200px;
         } */
 
-        h2 {
+        /* h2 {
             font-weight: 400;
         }
         h3 {
@@ -51,20 +51,36 @@
         }
         p {
             font-weight: bold;
+        } */
+
+        em {
+            font-style: normal;
+        }
+        div {
+            font-style: italic;
         }
 
     </style>
 </head>
 <body>
-    <h2>aaaaa</h2>
-    <div>bbbbb</div>
+
+    <em>em</em>
+    <div>div</div>
+
+    <!-- <h2>aaaaa</h2>
+    <div>bbbbb</div> -->
+
     <!-- <div class="red">div1</div>
     <div class="pink">div2</div> -->
+
     <!-- <div>div</div>
     <strong>strong</strong> -->
+
     <!-- <div id="div1">This is div.</div> -->
+
     <!-- <p class="color-pink">This is text.</p>
     <div class="color-pink font-40px">This is div.</div> -->
+
     <!-- <div style="color: orange;font-size: 30px;">This is div.</div> -->
 </body>
 </html>
