--- a/shop.html
+++ b/shop.html
@@ -72,19 +72,25 @@
             line-height: 2;
         } */
 
-        div {
+        /* div {
             height: 100px;
             line-height: 100px;
             background-color: red;
+        } */
+
+        div {
+            font-family: Arial, Helvetica, Times New Roman, Courier New, Verdana, Georgia, Palatino, Garamond, Bookman, Comic Sans MS, Trebuchet MS, Impact, Lucida Sans Unicode, Tahoma, Geneva, Century Gothic, Gill Sans, Lucida Console, Franklin Gothic Medium, Arial Black, Papyrus, Brush Script MT, Serif, Sans-serif, Monospace, Cursive, Fantasy, System-ui, Ui-serif, Ui-sans-serif, Ui-monospace, Ui-rounded, Math, Emoji, Fangsong            ;
         }
 
     </style>
 </head>
 <body>
 
-    <div>an apple</div>
+    <div>Every second, the Sun's core fuses about 600 billion kilograms.</div>
+
+    <!-- <div>an apple</div>
     <br>
-    <div>an<br> apple</div>
+    <div>an<br> apple</div> -->
 
     <!-- <p>Every second, the Sun's core fuses about 600 billion kilograms (kg) of hydrogen into helium and converts 4 billion kg of matter into energy. Far in the future, when hydrogen fusion in the Sun's core diminishes to the point where the Sun is no longer in hydrostatic equilibrium, its core will undergo a marked increase in density and temperature which will cause its outer layers to expand, eventually transforming the Sun into a red giant. This process will make the Sun large enough to render Earth uninhabitable approximately five billion years from the present.  </p>
     <p class="p1">Every second, the Sun's core fuses about 600 billion kilograms (kg) of hydrogen into helium and converts 4 billion kg of matter into energy. Far in the future, when hydrogen fusion in the Sun's core diminishes to the point where the Sun is no longer in hydrostatic equilibrium, its core will undergo a marked increase in density and temperature which will cause its outer layers to expand, eventually transforming the Sun into a red giant. This process will make the Sun large enough to render Earth uninhabitable approximately five billion years from the present.  </p>
