--- a/shop.html
+++ b/shop.html
@@ -78,8 +78,12 @@
             background-color: red;
         } */
 
-        div {
+        /* div {
             font-family: Arial, Helvetica, Times New Roman, Courier New, Verdana, Georgia, Palatino, Garamond, Bookman, Comic Sans MS, Trebuchet MS, Impact, Lucida Sans Unicode, Tahoma, Geneva, Century Gothic, Gill Sans, Lucida Console, Franklin Gothic Medium, Arial Black, Papyrus, Brush Script MT, Serif, Sans-serif, Monospace, Cursive, Fantasy, System-ui, Ui-serif, Ui-sans-serif, Ui-monospace, Ui-rounded, Math, Emoji, Fangsong            ;
+        } */
+
+        div {
+            font: italic bold 30px/200px Verdana;
         }
 
     </style>
@@ -87,6 +91,8 @@
 <body>
 
     <div>Every second, the Sun's core fuses about 600 billion kilograms.</div>
+
+    <!-- <div>Every second, the Sun's core fuses about 600 billion kilograms.</div> -->
 
     <!-- <div>an apple</div>
     <br>
