--- a/shop.html
+++ b/shop.html
@@ -82,8 +82,12 @@
             font-family: Arial, Helvetica, Times New Roman, Courier New, Verdana, Georgia, Palatino, Garamond, Bookman, Comic Sans MS, Trebuchet MS, Impact, Lucida Sans Unicode, Tahoma, Geneva, Century Gothic, Gill Sans, Lucida Console, Franklin Gothic Medium, Arial Black, Papyrus, Brush Script MT, Serif, Sans-serif, Monospace, Cursive, Fantasy, System-ui, Ui-serif, Ui-sans-serif, Ui-monospace, Ui-rounded, Math, Emoji, Fangsong            ;
         } */
 
-        div {
+        /* div {
             font: italic bold 30px/200px Verdana;
+        } */
+
+        div {
+            font: italic bold 30px/2 Verdana;
         }
 
     </style>
