--- a/shop.html
+++ b/shop.html
@@ -86,8 +86,12 @@
             font: italic bold 30px/200px Verdana;
         } */
 
-        div {
+        /* div {
             font: italic bold 30px/2 Verdana;
+        } */
+
+        div {
+            font: 30px Verdana;
         }
 
     </style>
