--- a/shop.html
+++ b/shop.html
@@ -89,11 +89,14 @@
         /* div {
             font: italic bold 30px/2 Verdana;
         } */
-
-        div {
+        
+        /* div {
             font: 30px Verdana;
+        } */
+        
+        div {
+            font: italic bold 30px/2;
         }
-
     </style>
 </head>
 <body>
